<resources>
    <string name="app_name">Universe Explorer</string>
    <string name="planet_name_label">Planet Name:</string>
    <string name="planet_mass_label">Planet Mass:</string>
    <string name="planet_gravity_label">Planet Gravity:</string>
    <string name="planet_colonies_label">Planet Colonies:</string>
    <string name="planet_population_label">Planet Population:</string>
    <string name="planet_military_label">Planet Military:</string>
    <string name="planet_bases_label">Planet Bases:</string>
    <string name="planet_forcefield_label">Planet Forcefield:</string>
    <string name="menu_add_planet">Add a New Planet</string>
    <string name="menu_config_planet">Configure Planet</string>
    <string name="menu_travel_planet">Travel to Planet</string>
    <string name="menu_attack_planet">Attack on Planet</string>
    <string name="menu_home_planet">Show Home Planet</string>
    <string name="planet_photos">Planet Photos</string>
    <string name="return_to_home_screen">Return to Home Screen</string>
    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>
</resources>
